@@ -1,8 +1,9 @@
- /* $Id: ChangeLog,v 1.824 2000-03-21 00:29:25 davidr Exp $ */
+ /* $Id: ChangeLog,v 1.825 2000-03-21 08:19:36 davidr Exp $ */
 
  2000-03-20: David Raison <djr@lemur.co.uk>
  	- OLE32: Ported OleQueryCreateFromData, OleCreateFromData from
  	         wine/corel sources.
+ 	- OLEAUT32: Bugfix in ITypeLibImpl_GetDocumentation
 
  2000-03-20: Sander van Leeuwen <sandervl@xs4all.nl>
 	- WSOCK32: Fixed relay bug in WSAAsyncSelect (delete relay slot 
